--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       $("#body0").dialog({
           width: 500,
           height: 400,
-          autoOpen:true,
-          title: "From: \n" +sender[0] + "Subject: " + sub[0],
+          autoOpen:true, 
+          title: "From: " +sender[0],
           modal:true,
           show: {
               effect:"fade"
